--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,7 @@
 {
 	"lock": false,
 	"name": "@li/error-is-error-polyfill",
-	"version": "0.0.0",
+	"version": "0.1.0",
 	"exports": {
 		".": "./isError.ts",
 		"./global": "./polyfill.ts"
@@ -10,11 +10,11 @@
 		"test": "deno test -A"
 	},
 	"imports": {
-		"@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.10.3",
 		"@std/assert": "jsr:@std/assert@^1.0.2",
-		"@std/fmt": "jsr:@std/fmt@^1.0.0",
 		"@std/fs": "jsr:@std/fs@^1.0.1",
+		"@std/http": "jsr:@std/http@^1.0.9",
 		"@std/jsonc": "jsr:@std/jsonc@^1.0.0",
+		"@std/path": "jsr:@std/path@^1.0.8",
 		"esbuild": "npm:esbuild@^0.23.1"
 	},
 	"fmt": {
